Update the LoginApp to use the latest changes in the auth module